@@ -1403,7 +1403,8 @@ class Element(Plugin):
                     # If mount_workspaces is set and we're doing incremental builds,
                     # the workspace is already mounted into the sandbox.
                     if not (mount_workspaces and self.__can_build_incrementally()):
-                        with self.timed_activity("Staging local files at {}".format(workspace.path)):
+                        with self.timed_activity("Staging local files at {}"
+                                                 .format(workspace.get_absolute_path())):
                             workspace.stage(temp_staging_directory)
                 else:
                     # No workspace, stage directly
@@ -1566,7 +1567,7 @@ class Element(Plugin):
                         path_components = self.__staged_sources_directory.lstrip(os.sep).split(os.sep)
                         sandbox_vpath = sandbox_vroot.descend(path_components)
                         try:
-                            sandbox_vpath.import_files(workspace.path)
+                            sandbox_vpath.import_files(workspace.get_absolute_path())
                         except UtilError as e:
                             self.warn("Failed to preserve workspace state for failed build sysroot: {}"
                                       .format(e))
@@ -1893,7 +1894,7 @@ class Element(Plugin):
                 source._init_workspace(temp)
 
             # Now hardlink the files into the workspace target.
-            utils.link_files(temp, workspace.path)
+            utils.link_files(temp, workspace.get_absolute_path())
 
     # _get_workspace():
     #
